add home.html navigationLinks

--- a/htmls/home.html
+++ b/htmls/home.html
@@ -6,7 +6,19 @@
     <link rel="stylesheet" type="text/css" href="../css/home.css">
 </head>
 <body onload="getDate()">
-	<h1><img src="../../../11377384_733494246805833_9086956607528534592_n.jpg" name="profilePic" alt="Profile Picture" style="width:128px;height:128px;">Carmen
+	
+  <h1>
+    <img src="../../../11377384_733494246805833_9086956607528534592_n.jpg" name="profilePic" alt="Profile Picture" style="width:128px;height:128px;">Carmen 
+    <nav id="topNavigation">
+      <ul> 
+        <li class ="topLinkList"> <a class="topLinks" href="paymentRegistry.html" >Pagar</a>  
+        <span class="topLinkStick">/</span> </li>
+        
+        <li class ="topLinkList"> <a class="topLinks" href="">Estados </a> 
+        <span class="topLinkStick">/</span> </li>
+        <li class ="topLinkList"> <a class="topLinks"  href="">Registrar Cuentas</a> </li> 
+      </ul> 
+    </nav>
 	</h1>
 	
 	<h3 id="header">ESTADOS DE CUENTA</h3>
