--- a/htmls/home.html
+++ b/htmls/home.html
@@ -8,7 +8,7 @@
 <body onload="getDate()">
 	
   <h1>
-    <img src="../../../11377384_733494246805833_9086956607528534592_n.jpg" name="profilePic" alt="Profile Picture" style="width:128px;height:128px;">Carmen 
+    <img src="../images/carla.jpg" name="profilePic" alt="Profile Picture" style="width:128px;height:128px;">Carmen 
     <nav id="topNavigation">
       <ul> 
         <li class ="topLinkList"> <a class="topLinks" href="paymentRegistry.html" >Pagar</a>  
