add the register link to home page

--- a/htmls/home.html
+++ b/htmls/home.html
@@ -16,7 +16,7 @@
         
         <li class ="topLinkList"> <a class="topLinks" href="">Estados </a> 
         <span class="topLinkStick">/</span> </li>
-        <li class ="topLinkList" href="resgister.html"> <a class="topLinks"  href="">Registrar Cuentas</a> </li> 
+        <li class ="topLinkList" > <a class="topLinks"  href="resgister.html">Registrar Cuentas</a> </li> 
       </ul> 
     </nav>
 	</h1>
