change the otro button

--- a/htmls/resgister.html
+++ b/htmls/resgister.html
@@ -13,7 +13,7 @@
   <article>
       <ul id="accountsDp" multiple>
       </ul>
-      <button id="otroButton" onClick="addAccount()">Otro</button>
+      <button id="otroButton" onClick="addAccount()">+</button>
       <p id="otraCuenta"></p>
   </article>
 
