update register.js and paymentRegister.js

--- a/htmls/resgister.html
+++ b/htmls/resgister.html
@@ -11,9 +11,9 @@
   <p> La pagina de registro es el lugar donde registraras todas las cuentas que mensualmente pagas. Esta registración por lo regular se hace solo la primera vez que vayas a usar nuestro servicio o cuando aparece una cuenta nueva que pagar. Al registrar tus cuentas podras pasar a la página de pagos donde podras realizar los mismos escogiendo las cuentas que desees pagar de las ya registradas.</p>
   <p>De necesitar añadir cuentas puedes volver a acceder esta página y añadirla sin necesidad de añadir todas nuevamente. Solamente pulsa el botón de "otra" y añade la cuenta si es que esta no existe en el listado previsto.</p>
   <article>
-      <ul id="accountsDp" multiple>
-      </ul>
-      <button id="otroButton" onClick="addAccount()">+</button>
+      <ul id="accountsDp" multiple></ul>
+      <button id="addAccountButton" onClick="addAccount()">+</button>
+      <button id="doneButton" onClick="getUserAccounts()">Done</button>
       <p id="otraCuenta"></p>
   </article>
 
