--- a/htmls/paymentRegistry.html
+++ b/htmls/paymentRegistry.html
@@ -19,7 +19,7 @@
 		<article>
 			<br />
 
-            <label id="ingresoLbl">Ingreso: <input type="number" id="totalSueldoInput" style="width:100px" onchange="updateBalanceLbl()"/></label>
+            <label id="ingresoLbl">Ingreso: <input type="number" id="totalSueldoInput" style="width:100px" onchange="updateBalanceLbl(this)"/></label>
             
             <label id="balanceLbl"> Balance: <label id="balanceLbl">$0.00</label></label>
                 <br /><br />
@@ -34,7 +34,7 @@
                         <td> <select id="cuentasDp"> <option value="0">AEE</option> </select> </td>
                         <td> <input style="width:75px;" type="date" id="fechaPago" max="2015-01-01" placeholder="MM-DD-YYY" > 
                         <!--<br /> <label id="formatLbls">MM-DD-YYYY</label> --> </td>
-                        <td> <input id="cantPago" type ="number" style=" width:100px" onChange="updateBalanceLbl()"/></td>
+                        <td> <input id="cantPago" type ="number" style=" width:100px" onChange="updateBalanceLbl(this)"/></td>
                     </tr>
 
                 </table>
