update payment registry. Now the account cell get disabled when a new row is added and the account used in the previous rows doesnt appear in the existing row.

--- a/htmls/paymentRegistry.html
+++ b/htmls/paymentRegistry.html
@@ -30,16 +30,16 @@
                         <th id="pago">Fecha</th>
                         <th id="pago">Pago</th>
                     </tr>
-                    <tr>
-                        <td> <select id="cuentasDp"> <option value="0">AEE</option> </select> </td>
+                    <!-- <tr>
+                        <td> <select id="cuentaCell0"> <option id=0 value="0">AEE</option> </select> </td>
                         <td> <input style="width:75px;" type="date" id="fechaPago" max="2015-01-01" placeholder="MM-DD-YYY" > 
-                        <!--<br /> <label id="formatLbls">MM-DD-YYYY</label> --> </td>
+                        <br /> <label id="formatLbls">MM-DD-YYYY</label>  </td>
                         <td> <input id="cantPago" type ="number" style=" width:100px" onChange="updateBalanceLbl(this)"/></td>
-                    </tr>
+                    </tr> -->
 
                 </table>
 
-            <input type="button" name="button" onclick="addNewPayment()" class="button" style="width:30px; height:30px" />
+            <input type="button" id= "addButton" name="button" onclick="addNewPayment()" class="button" style="width:30px; height:30px" />
           
 
 
