--- a/htmls/paymentRegistry.html
+++ b/htmls/paymentRegistry.html
@@ -19,7 +19,7 @@
 		<article>
 			<br />
 
-            <label id="ingresoLbl">Ingreso: <input type="number" id="totalSueldoInput" style="width:100px" onchange="updateIngreso(this)"/></label>
+            <label id="ingresoLbl">Ingreso: <input type="number" id="totalSueldoInput" style="width:100px" onchange="updateBalanceLbl(this)"/></label>
             
             <label id="balanceLbl"> Balance: <label id="balanceLbl">$0.00</label></label>
                 <br /><br />
