update login.html. Add a link to home from the login button

--- a/htmls/login.html
+++ b/htmls/login.html
@@ -16,10 +16,11 @@
 
  		<form>
  		<span class="formusername">Username:</span>
- 		<br><input id="username" type="text" name="username" placeholder="username" required><br>
+ 		<br><input id="username" type="text" name="username" placeholder="username" ><br>
  		<span class="formpassword">Password:</span>
- 		<br><input id="passwordinput" type="text" name="password" placeholder="password" required><br><br>
- 		<input type="submit" name="submit" value="Login" onclick="getLoggedUser()"><br>
+ 		<br><input id="passwordinput" type="text" name="password" placeholder="password" ><br><br>
+ 		<a id="submit" value="login" href="htmls/home.html">Login</a>
+ 		<!-- <input type="submit" name="submit" value="Login" onclick="<a href=htmls/signup.html\">"><br> -->
  		
 		</form>
 
