update paymentRegistry.js and paymentRegistry.css. Add done button and its functionalities

--- a/htmls/paymentRegistry.html
+++ b/htmls/paymentRegistry.html
@@ -39,7 +39,8 @@
 
                 </table>
 
-            <input type="button" id= "addButton" name="button" onclick="addNewPayment()" class="button" style="width:30px; height:30px" />
+            <input type="button" id= "addButton" name="addButton" onclick="addNewPayment()" class="button" style="width:30px; height:30px" />
+            <input type="button" id= "doneButton" name="doneButton" value="Done" style="width:30px; height:30px" class="button" onCLick= "paymentsDone()"/>
           
 
 
