--- a/htmls/signup.html
+++ b/htmls/signup.html
@@ -7,7 +7,7 @@
 <body onload = "getUser()" >
 	<h2 id="bodyh2">Sign Up</h2>
 	<section>
-		<form id = "userForm" >
+		<form id = "userForm" action="signUp.php" method="post">
 		
 		First Name:
 		<br><input type="text" name="firstname" placeholder="firstname" autofocus ="autofocus" onchange="getUser()" required><br><hr>
@@ -23,11 +23,18 @@
 		email:
 		<br><input type="text" name="email" placeholder="email" onchange="getUser()" required><span id="incEmail">* Invalid Email</span><br><hr>
 
-		<input id="submit" type="submit" name="submit" value="create account" onclick ="getUser()">
+		<input id="submit" type="submit" name="submit" value="create account">
 
 
 		</form>
 	</section>
 <script type="text/javascript" src = "signup.js"></script>
+
+<?php
+
+ echo $_POST["firstName"]; 
+ echo $_POST["lastName"]; 
+
+?>
 </body>
 </html>
