--- a/htmls/signup.html
+++ b/htmls/signup.html
@@ -7,7 +7,7 @@
 <body onload = "getUser()" >
 	<h2 id="bodyh2">Sign Up</h2>
 	<section>
-		<form id = "userForm" action="" method="post">
+		<form id = "userForm" action="" method="POST">
 		
 		First Name:
 		<br><input type="text" name="firstname" placeholder="firstname" autofocus ="autofocus" onchange="getUser()" required><br><hr>
