--- a/htmls/signup.html
+++ b/htmls/signup.html
@@ -7,7 +7,7 @@
 <body onload = "getUser()" >
 	<h2 id="bodyh2">Sign Up</h2>
 	<section>
-		<form id = "userForm" action="" method="POST">
+		<form id = "userForm" action=" " method="get">
 		
 		First Name:
 		<br><input type="text" name="firstname" placeholder="firstname" autofocus ="autofocus" onchange="getUser()" required><br><hr>
@@ -28,8 +28,8 @@
 
 		</form>
 		<?php 
- echo $_POST["firstname"]; <br>
-Your email address is:  echo $_POST["email"]; 
+ echo $_GET["firstname"]; <br>
+Your email address is:  echo $_GET["email"]; 
 ?>
 
 	</section>
