updating signUp.html

--- a/htmls/signUp.html
+++ b/htmls/signUp.html
@@ -5,13 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="../css/signup.css">
 </head>
 <body onload = "getUser()" >
-	<?php 
- echo $_GET["firstname"]; <br>
-Your email address is:  echo $_GET["email"]; 
-?>
+
 	<h2 id="bodyh2">Sign Up</h2>
 	<section>
-		<form id = "userForm" action=" " method="get">
+		<form id = "userForm" action="signUp.php" method="get">
 		
 		First Name:
 		<br><input type="text" name="firstname" placeholder="firstname" autofocus ="autofocus" onchange="getUser()" required><br><hr>
@@ -36,11 +33,6 @@ Your email address is:  echo $_GET["email"];
 	</section>
 <script type="text/javascript" src = "signup.js"></script>
 
-<?php
 
- echo $_POST["firstname"]; 
- echo $_POST["lastname"]; 
-
-?>
 </body>
 </html>
