updating signUp.html

--- a/htmls/signUp.html
+++ b/htmls/signUp.html
@@ -8,7 +8,7 @@
 
 	<h2 id="bodyh2">Sign Up</h2>
 	<section>
-		<form id = "userForm" action="signUp.php" method="get">
+		<form id = "userForm" action="signUp.php" method="post">
 		
 		First Name:
 		<br><input type="text" name="firstname" placeholder="firstname" autofocus ="autofocus" onchange="getUser()" required><br><hr>
