--- a/htmls/signUp.html
+++ b/htmls/signUp.html
@@ -4,11 +4,32 @@
 	<title>Subscribe</title>
 	<link rel="stylesheet" type="text/css" href="../css/signup.css">
 </head>
-<body onload = "getUser()" >
+<body>
+	<?php
+	 $firstname=$lastname=$secondlastname=$username=$password=$email="";
+	 if($_SERVER["_REQUEST METHOD"]=="POST")
+	 	{
+  		$firstname = test_input($_POST["firstname"]);
+  		$lastname = test_input($_POST["lastname"]);
+  		$email = test_input($_POST["email"]);
+  		$secondlastname = test_input($_POST["secondlastname"]);
+  		$password = test_input($_POST["password"]);
+  		$username = test_input($_POST["username"]);
+		}
+
+function test_input($data) {
+  $data = trim($data);
+  $data = stripslashes($data);
+  $data = htmlspecialchars($data);
+  return $data;
+}
+?>
+
+	?>
 
 	<h2 id="bodyh2">Sign Up</h2>
 	<section>
-		<form id = "userForm" action="signUp.php" method="post">
+		<form id = "userForm" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>" method="post">
 		
 		First Name:
 		<br><input type="text" name="firstname" placeholder="firstname" autofocus ="autofocus" onchange="getUser()" required><br><hr>
@@ -32,7 +53,18 @@
 
 	</section>
 <script type="text/javascript" src = "signup.js"></script>
-
+<?php
+echo "<h2>Your Input:</h2>";
+echo $firstname;
+echo "<br>";
+echo $email;
+echo "<br>";
+echo $username;
+echo "<br>";
+echo $password;
+echo "<br>";
+echo $lastname;
+?>
 
 </body>
 </html>
